# deployfish

./: .autoenv  .autoenv.leave  .bumpversion.cfg  .gitignore  .readthedocs.yml  AUTHORS.txt  CHANGES.md  CHANGES.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  deploy-complete.bash  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
deployfish/: __init__.py  cli.py  config.py  dbcli.py  dplycli.py  exceptions.py  main.py  mysql.py  registry.py  ssh.py  terraform.py  types.py  typing.py
deployfish/aws/: __init__.py  appscaling.py  asg.py  cloudwatch.py  ecs.py  s3.py  service_discovery.py  systems_manager.py
deployfish/aws/ecs/: Service.py  Task.py  TaskScheduler.py  Task_old.py  __init__.py  task_definition.py  waiters.py
deployfish/aws/test/: container_aws.json  simple.yml  test_ApplicationAutoscaling.py  test_ContainerDefinition.py  test_ECSServiceCPUAlarm.py  test_Parameter.py  test_ScalingPolicy.py  test_Service.py  test_TaskDefinition.py  test_UnboundParameter.py  test_UnboundParameterFactory.py
deployfish/cli/: __init__.py  alb.py  awslogs.py  cli.py  cluster.py  config.py  docker.py  elb.py  elbv2.py  invoked_task.py  misc.py  parameters.py  service.py  services.py  task.py  tasks.py  top.py  tunnel.py
deployfish/cli/adapters/: __init__.py  abstract.py  alb.py  cloudwatchlogs.py  ecs.py  elb.py  elbv2.py  ssh.py  utils.py
deployfish/cli/adapters/commands/: __init__.py  cloudwatchlogs.py  crud.py  ecs.py  network.py  secrets.py
deployfish/cli/renderers/: __init__.py  abstract.py  filters.py  misc.py  raw.py  table.py  template.py
deployfish/cli/templates/: applicationloadbalancer--detail.tpl  classicloadbalancer--detail.tpl  cloudwatchloggroup--detail.tpl  cloudwatchlogstream--detail.tpl  cluster--detail.tpl  invokedtask--detail.tpl  secrets--detail.tpl  secrets--diff.tpl  service--detail.tpl  service--detail:short.tpl  servicehelpertask--detail.tpl  servicehelpertask--list.tpl  standalonetask--detail.tpl  standalonetask--detail:short.tpl
deployfish/cli/templates/macros/: invoked-task.tpl  secrets.tpl  service.tpl  target-group.tpl  task-definition.tpl  task.tpl  utils.tpl
deployfish/config/: __init__.py  config.py
deployfish/config/processors/: __init__.py  abstract.py  environment.py  terraform.py
deployfish/config/test/: env_file.env  interpolate.yml  terraform.tfstate  terraform.tfstate.prod  terraform.tfstate.qa  terraform_interpolate.yml  test_Config.py  test_Terraform.py
deployfish/controllers/: __init__.py  base.py  cluster.py  commands.py  crud.py  elb.py  elbv2.py  invoked_task.py  logs.py  network.py  rds.py  secrets.py  service.py  task.py  tunnel.py  utils.py
deployfish/core/: aws.py  loaders.py  ssh.py  utils.py
deployfish/core/adapters/: __init__.py  abstract.py
deployfish/core/adapters/deployfish/: __init__.py  appscaling.py  cloudwatch.py  ecs.py  events.py  mixins.py  secrets.py  service_discovery.py  ssh.py
deployfish/core/models/: __init__.py  abstract.py  alb.py  appscaling.py  cloudwatch.py  cloudwatchlogs.py  ec2.py  ecs.py  efs.py  elb.py  elbv2.py  events.py  mixins.py  rds.py  secrets.py  secrets_manager.py  service_discovery.py  ssh.py  vpc.py
deployfish/core/models/test/: test_TaskDefinitionFARGATEMixin.py
deployfish/core/test/: container_aws.json  simple.yml  test_ContainerDefinition.py  test_ECSServiceCPUAlarm.py  test_ScalingPolicy.py  test_TaskDefinition.py  test_UnboundParameter.py  test_UnboundParameterFactory.py
deployfish/core/utils/: __init__.py  mixins.py  utils.py
deployfish/core/waiters/: __init__.py
deployfish/core/waiters/hooks/: __init__.py  abstract.py  ecs.py
deployfish/ext/: ext_df_argparse.py  ext_df_jinja2.py  ext_df_plugin.py
deployfish/plugins/mysql/: __init__.py  hooks.py
deployfish/plugins/mysql/controllers/: mysql.py
deployfish/plugins/mysql/models/: __init__.py  mysql.py
deployfish/plugins/mysql/templates/: detail--mysqldatabase.jinja2
deployfish/plugins/slack/: __init__.py  hooks.py
deployfish/plugins/sqs/: __init__.py  hooks.py
deployfish/renderers/: __init__.py  abstract.py  misc.py  table.py
deployfish/templates/: detail--classicloadbalancer.jinja2  detail--cloudwatchloggroup.jinja2  detail--cluster.jinja2  detail--invokedtask.jinja2  detail--loadbalancer.jinja2  detail--loadbalancerlistener.jinja2  detail--rdsinstance.jinja2  detail--secrets--diff.jinja2  detail--secrets.jinja2  detail--service--short.jinja2  detail--service.jinja2  detail--servicehelpertask.jinja2  detail--sshtunnel.jinja2  detail--standalonetask--short.jinja2  detail--standalonetask.jinja2  detail--targetgroup.jinja2  detail.jinja2  plan--service.jinja2  plan--standalonetask.jinja2
deployfish/templates/macros/: awslogs.jinja2  classicloadbalancer.jinja2  service.jinja2  task-definition.jinja2  task.jinja2  utils-plan.jinja2  utils.jinja2
deployfish/test/: env_file.env  interpolate.yml  terraform.tfstate  terraform.tfstate.0.12  test_Config.py  test_Terraform.py
docs/: Makefile  requirements.txt
docs/source/: advanced.rst  alb.rst  conf.py  deploy.rst  dev.rst  devintro.rst  ecs.rst  elb.rst  extend.rst  index.rst  install.rst  intro.rst  mysql.rst  plugins.rst  quickintro.rst  secrets.rst  slack.rst  sysmgr.rst  tutorial1.rst  tutorial2.rst  tutorial3.rst  tutorial4.rst  tutorial5.rst  tutorial6.rst  tutorials.rst  yaml.rst
docs/source/api/: adapters.rst  config.rst  controllers.rst  ecs.rst  elb.rst  elbv2.rst  loaders.rst  main.rst  renderers.rst  secrets.rst
docs/source/api/adapters/: abstract.rst  appscaling.rst  cloudwatch.rst  ecs.rst  events.rst  index.rst  mixins.rst  secrets.rst  service_discovery.rst  ssh.rst
docs/source/plugins/: plugins.rst  slack.rst  sqs.rst
docs/source/runbook/: architecture.rst  contributing.rst  extending.rst  testing.rst
examples/: appscaling-targettracking.yml  appscaling.yml  asg.yml  basic.yml  different-aws-profile.yml  fargate.yml  mulitple-containers.yml  no-elb.yml  parameter-store.yml  run_task.yml  terraform-basic.yml  tutorial_1.yml  tutorial_2.yml  volumes.yml
(+40 files in other folders)
