[metadata]
name = deployfish
version = 1.14.8
description = AWS ECS related deployment tools
author = Caltech IMSS ADS
author_email = imss-ads-staff@caltech.edu
url = https://github.com/caltechads/deployfish
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    aws
    ecs
    docker
    devops
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
project_urls =
    Documentation = https://deployfish.readthedocs.io/en/latest/
    Source = https://github.com/caltechads/deployfish
    Issues = https://github.com/caltechads/deployfish/issues

[options]
zip_safe = False
platforms = any
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    boto3 >= 1.26.36
    cement==3.0.10
    click >= 6.7
    colorlog
    jinja2 >= 2.11
    jsondiff2 >= 1.2.3
    pytz
    PyYAML >= 5.1
    requests >= 2.18.4
    shellescape >= 3.8.1
    tabulate >= 0.8.1
    typing_extensions
    tzlocal >= 4.0.1
    docker >= 7.1.0
    slack_sdk >= 3.31.0
    slackfin >= 0.2.2
    gitpython >= 3.1.43
    giturlparse >= 0.12.0
    setuptools >= 74.1.2
    simplesqs >= 0.4.0

[options.entry_points]
console_scripts =
    deploy = deployfish.main:main
    dpy = deployfish.main:main

[options.package_data]
deplofish =
    deployfish = py.typed

[bdist_wheel]
universal = 1


# -------
# Linters
# -------

[flake8]
max-line-length: 120
filename: *.py
exclude: *.cfg, *.js, *.json, *.bak, *.md, *.sql, *.sh, *.txt, *.yml, simple_test_db, Makefile, Dockerfile, MANIFEST.in
# E221:  multiple spaces before operator
# E241:  multiple spaces after :
# E265:  block comment should start with '# '
# E266:  too many leading '#' for block comment
# E401:  multiple imports on one line
# W503:  line break before binary operator
ignore = E221,E241,E265,E266,E401,C0321,W503,C901

[pylint.FORMAT]
max-line-length=120

[pylint.MESSAGES CONTROL]
disable=
    missing-docstring,
    protected-access,
    unused-argument,
    invalid-name,
    too-few-public-methods,
    attribute-defined-outside-init,
    consider-using-f-string,
    too-many-lines,
    no-member,
    unnecessary-pass,

[mypy]
python_executable: ~/.pyenv/shims/python
implicit_optional = True
exclude = (^build/.*$|^docs/.*\.py$|test_.*\.py$)

[mypy-jsondiff]
ignore_missing_imports = True

[mypy-shellescape]
ignore_missing_imports = True

[mypy-botocore.docs.docstring]
ignore_missing_imports = True

[mypy-cement.*]
ignore_missing_imports = True

